[package]
name = "etm-rs"
version = "0.1.0"
edition = "2018"
authors = ["SHI Wenxuan <whexy@outlook.com>"]
description = "Embedded Trace for Linux Program with Coresight ETMv4"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
tock-registers = "0.7.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"